--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -15,7 +15,7 @@
 
     "strict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
